--- a/ly-item/ly-item-interface/pom.xml
+++ b/ly-item/ly-item-interface/pom.xml
@@ -12,5 +12,16 @@
     <groupId>com.leyou.service</groupId>
     <artifactId>ly-item-interface</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
