--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ly-api-geteway</module>
         <module>ly-item</module>
         <module>ly-common</module>
+        <module>ly-upload</module>
     </modules>
 
     <name>leyou</name>
@@ -101,12 +102,8 @@
 
     <repositories>
         <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <id>central</id>
+            <url>http://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
 </project>
