--- a/ly-api-geteway/src/main/resources/application.yml
+++ b/ly-api-geteway/src/main/resources/application.yml
@@ -17,7 +17,7 @@ zuul:
   retryable: true
   routes:
     item-service: /item/** # 将商品微服务映射到/item/**
-  ignored-patterns: upload-servie
+  ignored-services: upload-servie
 ribbon:
   ConnectTimeout: 250 # 连接超时时间(ms)
   ReadTimeout: 2000 # 通信超时时间(ms)
